--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,10 +2,132 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <titile>World's Best Lasagna</titile>
+        <title>World's Best Lasagna</title>
     </head>
     <body>
-        <h1>Wrold's Best Lasagna</h1>
+        <h1>World's Best Lasagna</h1>
+        <img src="../imgs/lasagna.jpg">
+        <h2>Description</h2>
+        <p>When John Chandler submitted this lasagna recipe 
+            to MM Recipes more than 20 years ago, he had no 
+            idea how successful it would become.
+            One of our top-performing recipes
+            of all time, World's Best Lasagna 
+            racks up more than 7 million views per year
+            and has ranked among the most popular lasagna recipes 
+            on the internet for two decades. 
+            Unfortunately, John unexpectedly 
+            passed away at 53 years old — read all about 
+            his life and legacy here.</p>
+        <p>Make our most popular lasagna today to find out what all the fuss is about!</p>
+        <h3>How to Make Lasagna</h3>
+        <p>Making lasagna can be time-consuming, but the results are well worth the wait. 
+            You'll find a detailed ingredient list and step-by-step 
+            instructions in the recipe below, but let's go over the basics:</p>
+        <h4>Lasagna Ingredients</h4>
+        <p>The Allrecipes community adores this lasagna recipe because it's incredibly customizable,
+            so you can easily alter the ingredient list to suit your needs. 
+            If you want to stay true to the original recipe, though, these are the 
+            ingredients you'll need to add to your grocery list:</p>
+        <ul>
+            <li><strong>Meat:</strong>This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
+            <li><strong>Onion and garlic:</strong>An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+            <li><strong>Tomato products:</strong>You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+            <li><strong>Sugar:</strong>Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+            <li><strong>Spices and seasonings:</strong>This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
+            <li><strong>Lasagna noodles:</strong>Use store-bought or homemade lasagna noodles.</li>
+            <li><strong>Cheeses:</strong>Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+            <li><strong>Egg:</strong>An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+        </ul>
+        <h4>How to Make Lasagna Step-By-Step</h4>
+        <p>Here's a very brief overview of what you can expect when you make homemade lasagna:</p>
+        <ol>
+            <li>Make the meat sauce.</li>
+            <li>Cook the noodles.</li>
+            <li>Make the ricotta mixture.</li>
+            <li>Layer the lasagna according to the recipe instructions.</li>
+            <li>Cover with foil and bake.</li>
+            <li>Let the lasagna rest before serving.</li>
+        </ol>
+        <h4>How to Layer Lasagna</h4>
+        <p>The detailed layering instructions can be found in the recipe below, 
+        but this is the order you'll follow:</p>
+        <ol>
+            <li>Meat sauce</li>
+            <li>Noodles</li>
+            <li>Ricotta mixture</li>
+            <li>Mozzarella slices</li>
+            <li>Meat sauce</li>
+            <li>Parmesan cheese</li>
+            <li>Repeat the layers, then top with the remaining Parmesan.</li>
+        </ol>
+        <h4>How Long to Cook Lasagna</h4>
+        <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. 
+        Cover it with foil for the first 25 minutes, 
+        then let it cook uncovered for the final 25 minutes. Also, 
+        it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.</p>
+        <h3>What to Serve With Lasagna</h3>
+        <p>Wondering what goes with lasagna? We've got you covered.
+        Check out our collection of <a href="https://www.allrecipes.com/gallery/easy-side-dishes-lasagna/" target="_blank" rel="noopenner norefferer">12 Easy Side Dishes for Lasagna</a> for delicious serving inspiration. 
+        Or try one of these three popular sides that pair perfectly with lasagna:</p>
+        <ul>
+            <li><a href="https://www.allrecipes.com/recipe/21080/great-garlic-bread/" target="_blank" rel="noopenner norefferer">Great Garlic Bread</a></li>
+            <li><a href="https://www.allrecipes.com/recipe/222659/tomato-mozzarella-salad/" target="_blank" rel="noopenner norefferer">Tomato Mozzarella Salad</a></li>
+            <li><a href="https://www.allrecipes.com/recipe/161688/quick-and-easy-sauteed-spinach/" target="_blank" rel="noopenner norefferer">Quick and Easy Sautéed Spinach</a></li>
+        </ul>
+        <h3>How to Reheat Lasagna</h3>
+        <p>You can use the microwave to reheat lasagna if you're in a pinch or short on time, 
+        but be aware that it will change the texture of the noodles. 
+        The best way to reheat lasagna is in the oven.
+        Simply cover the leftovers with foil and bake at 350 degrees F for about half an hour, 
+        or until it's heated through and the sauce is bubbly.</p>
+        <h3>How to Freeze Lasagna</h3>
+        <p>If you're planning to freeze lasagna, it's best to cook it in a foil baking dish. 
+        Allow the casserole to cool, then cover the whole thing in at least one layer of storage wrap. 
+        Wrap it again in aluminum foil to prevent freezer burn. Freeze for up to three months.</p>
+        <h4>How to Reheat Frozen Lasagna</h4>
+        <p>Thaw the frozen lasagna in the refrigerator overnight, 
+        then follow the reheating instructions above. If you don't 
+        have time to thaw in the fridge, you can reheat it from frozen — 
+        just make sure to add a few minutes to the cook time to 
+        ensure the dish is heated through.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pound sweet Italian sausage</li>
+            <li>¾ pound lean ground beef</li>
+            <li>½ cup minced onion</li>
+            <li>2 cloves garlic, crushed</li>
+            <li>1 (28 ounce) can crushed tomatoes</li>
+            <li>2 (6.5 ounce) cans canned tomato sauce</li>
+            <li>2 (6 ounce) cans tomato paste</li>
+            <li>½ cup water</li>
+            <li>2 tablespoons white sugar</li>
+            <li>4 tablespoons chopped fresh parsley, divided</li>
+            <li>1 ½ teaspoons dried basil leaves</li>
+            <li>1 ½ teaspoons salt, divided, or to taste</li>
+            <li>1 teaspoon Italian seasoning</li>
+            <li>½ teaspoon fennel seeds</li>
+            <li>¼ teaspoon ground black pepper</li>
+            <li>12 lasagna noodles</li>
+            <li>16 ounces ricotta cheese</li>
+            <li>1 egg</li>
+            <li>¾ pound mozzarella cheese, sliced</li>
+            <li>¾ cup grated Parmesan cheese</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li><strong>Step 1</strong><p>Gather all your ingredients.</p></li>
+            <li><strong>Step 2</strong><p>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</p></li>
+            <li><strong>Step 3</strong><p>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</p></li>
+            <li><strong>Step 4</strong><p>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water.</p></li>
+            <li><strong>Step 5</strong><p>In a mixing bowl, combine ricotta cheese with egg, remaining 2 tablespoons parsley, and 1/2 teaspoon salt.</p></li>
+            <li><strong>Step 6</strong><p>Preheat the oven to 375 degrees F (190 degrees C).</p></li>
+            <li><strong>Step 7</strong><p>To assemble, spread 1 ½ cups of meat sauce in the bottom of a 9x13-inch baking dish. Arrange 6 noodles lengthwise over meat sauce, overlapping slightly. Spread with 1/2 of the ricotta cheese mixture. Top with 1/3 of the mozzarella cheese slices. Spoon 1 ½ cups meat sauce over mozzarella, and sprinkle with 1/4 cup Parmesan cheese.</p></li>
+            <li><strong>Step 8</strong><p>Repeat layers, and top with remaining mozzarella and Parmesan cheese. Cover with foil: to prevent sticking, either spray foil with cooking spray or make sure the foil does not touch the cheese.</p></li>
+            <li><strong>Step 9</strong><p>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</p></li>
+            <li><strong>Step 10</strong><p>Rest lasagna for 15 minutes before serving.</p></li>
+        </ol>
         
+        <a href="../index.html">Home</a>
     </body>
 </html>
