--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/biryani.html"><p>Chicken Biryani</p></a>
-        <a href="./recipes/lasagna.html"><p>World's Best Lasagna</p></a>
+        <a href="./recipes/biryani.html" target="_blank" rel="noopenner norefferer"><p>Chicken Biryani</p></a>
+        <a href="./recipes/lasagna.html" target="_blank" rel="noopenner norefferer"><p>World's Best Lasagna</p></a>
     </body>
 </html>
