Added a new recipe and made some updates.
added a new mac and cheese recipe and modified the
lasagna recipe file to add an alt tag in the image

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Odin Recipes</h1>
         <a href="./recipes/biryani.html" target="_blank" rel="noopenner norefferer"><p>Chicken Biryani</p></a>
         <a href="./recipes/lasagna.html" target="_blank" rel="noopenner norefferer"><p>World's Best Lasagna</p></a>
+        <a href="./recipes/mac-n-cheese.html" target="_blank" rel="noopenner norefferer">Homemade Mac & Cheese</a>
     </body>
 </html>
