--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>World's Best Lasagna</h1>
-        <img src="../imgs/lasagna.jpg">
+        <img src="../imgs/lasagna.jpg" alt="A picture of delicious lasagna">
         <h2>Description</h2>
         <p>When John Chandler submitted this lasagna recipe 
             to MM Recipes more than 20 years ago, he had no 
